# baseline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  commit_style.md
scripts/: run_baseline_suite.sh
src/evidenceqa_baseline/: __init__.py  __main__.py  artifact.py  cache.py  cli.py  config.py  dataset.py  devices.py  failure_report.py  jsonl.py  log_utils.py  media.py  metrics.py  parser.py  progress.py  prompting.py  records.py  report.py  runner.py  suite.py  taxonomy.py
src/evidenceqa_baseline/adapters/: __init__.py  base.py  frame_utils.py  internvl.py  internvl_generate.py  internvl_worker.py  llava_onevision.py  qwen_vl.py
src/evidenceqa_baseline_refactor/: __init__.py  cli.py  dataset.py  log_utils.py  metrics.py  parser.py  prompting.py  records.py  runner.py  spatial_runner.py  tables.py
src/evidenceqa_baseline_refactor/adapters/: __init__.py  base.py  frame_utils.py  generation.py  internvl.py  internvl_worker.py  llava_onevision.py  qwen_vl.py  transformers_io.py
