[project]
name = "evidenceqa-baseline-refactor"
version = "0.1.0"
description = "Clean EvidenceQA baseline rewrite scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[project.scripts]
evidenceqa-baseline-refactor = "evidenceqa_baseline_refactor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidenceqa_baseline_refactor"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

