[project]
name = "evidenceqa-baseline-refactor"
version = "0.1.0"
description = "Structured refactor of the original EvidenceQA baseline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
vl = [
    "decord>=0.6",
    "accelerate>=0.34",
    "einops>=0.8",
    "pillow>=10.0",
    "qwen-vl-utils[decord]>=0.0.8",
    "timm>=1.0",
    "torch>=2.3",
    "torchcodec>=0.9",
    "torchvision>=0.18",
    "transformers>=4.57.0",
]
qwen = [
    "decord>=0.6",
    "accelerate>=0.34",
    "pillow>=10.0",
    "qwen-vl-utils[decord]>=0.0.8",
    "torch>=2.3",
    "torchcodec>=0.9",
    "torchvision>=0.18",
    "transformers>=4.57.0",
]
dev = [
    "ruff>=0.6",
]

[project.scripts]
evidenceqa-baseline-refactor = "evidenceqa_baseline_refactor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidenceqa_baseline_refactor"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
